tests/fixtures/pass/coalesce_infer_local_without_annotation.sc
use std.Option

let main(): i32 = {
  let answer = Option.None ?? 42
  answer
}
