tests/fixtures/fail/result_requires_explicit_constructor.sc
use std.Result

let wrong(): Result(bool)(i32) = { 42 }

let main(): i32 = { 42 }
